[gd_scene load_steps=10 format=2]

[ext_resource path="res://BaseLevel.gd" type="Script" id=1]
[ext_resource path="res://Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/sixthsense.png" type="Texture" id=3]
[ext_resource path="res://Edge.tscn" type="PackedScene" id=4]
[ext_resource path="res://bouncing_wall.tres" type="PhysicsMaterial" id=5]
[ext_resource path="res://Bottom.gd" type="Script" id=6]
[ext_resource path="res://Hud.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 400, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 390, 10 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 400, 888 )
__meta__ = {
"_edit_group_": true
}

[node name="Paddle" parent="." instance=ExtResource( 2 )]

[node name="BallDummy" type="Sprite" parent="Paddle"]
position = Vector2( 0, -30 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="Left" parent="." instance=ExtResource( 4 )]
position = Vector2( -3, 540 )

[node name="Right" parent="." instance=ExtResource( 4 )]
position = Vector2( 803, 540 )

[node name="Top" type="StaticBody2D" parent="."]
position = Vector2( 400, -5 )
physics_material_override = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
shape = SubResource( 1 )

[node name="SpawnPosition" type="Position2D" parent="Top"]
position = Vector2( 200, 6 )

[node name="Bottom" type="Area2D" parent="."]
position = Vector2( 400, 1060 )
collision_mask = 31
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
shape = SubResource( 3 )

[node name="Hud" parent="." instance=ExtResource( 7 )]

[node name="SpeedUpTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="EscapeTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="area_entered" from="Bottom" to="Bottom" method="_on_Bottom_area_entered"]
[connection signal="body_entered" from="Bottom" to="Bottom" method="_on_Bottom_body_entered"]
[connection signal="redo" from="Bottom" to="." method="_on_Bottom_redo"]
[connection signal="timeout" from="SpeedUpTimer" to="." method="_on_SpeedUpTimer_timeout"]
[connection signal="timeout" from="EscapeTimer" to="." method="_on_EscapeTimer_timeout"]
